css/style.css
/* overall styling. Should work for the Samsung tab a8; 1920 x 1200px */
.large_font {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 500;
  font-size: 96px;
  line-height: 100%;
  letter-spacing: 0.3px;
  color: #212121;
}

.small_font {
font-family: 'Inter';
font-style: normal;
font-weight: 400;
font-size: 32px;
line-height: 150%;
letter-spacing: 0.3px;
color: #666666;
}

/* styling for greeting for homepage */
.flex_container_greeting {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  flex-wrap: nowrap;
  width: 371px;
  height: 79px;
  margin-left: 64px;
  margin-right: 64px; 
  margin-top: 58px;
}

#greeting {
  font-weight: 700;
  font-size: 66px;
  line-height: 120%;
}

#small_greeting {
  width: 1072px;
  height: 48px;
}

/* styling for #of exercise completed for the day */
.flex_container_daily_exercise {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex-wrap: wrap;
  width: 1072px;
  height: 224px;
  margin-left: 64px;
  margin-right: 64px; 
  margin-top: 90px;
  background-color: white;
  opacity: 0.99;
  border: 1px solid #EFEFF0;
  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
  border-radius: 32px;
}

#purple_runner {
  margin-top:  57.12px;
  margin-left: 51.2px;
}

#exercise_num {
  width: 158px;
  height: 96px;
  margin-left: 64px;
  margin-top: 57.12px;
}

#small_font {
  margin-left: 32px;
  margin-top: 96px;
}

#today_exercise_prog_bar {
  margin-left: 208px;
  margin-top: -20px;

}

/* styling for "Weekly Report" title/header section*/
.flex_container_title {
  display: flex; 
  flex-direction: row;
  justify-content: flex-start;
  flex-wrap: nowrap; 
  width: 1892px;
  height: 55px;
  margin-left: 64px;
  margin-right: 64px;
  margin-top: 48px;
}

#weekly_report {
  width: 329px;
  height: 55px;
  font-weight: 600;
  font-size: 46px;
  line-height: 120%;
}

#see_more {
  width: 120px;
  height: 39px;
  font-size: 26px;
  line-height: 150%;
  margin-left: 559px;
  margin-top: 8px;
}

#arrowButton {
  margin-top: 17.47px;
  margin-left: 21.9px;
}

/*Weekly Report's Progress Bars styling*/
.flex_container_weekly_progress {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
  width: 1072px;
  height: 369.83px;
  margin-left: 64px;
  margin-top: 48px;
  background: #FFFFFF;
  border: 1px solid #EFEFF0;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
  border-radius: 32px;
}

#date_week {
  width: 236px;
  height: 48px;
  margin-left: 418px;
  margin-top: 40px;
  margin-right: 418px;
}

/* sub styling; for the 7 daily, circular, progress bars
Keeping each day separate so that it's easier to edit each individual one later on */
#monday_prog {
  margin-left: 32px;
  margin-top: -40px;
}

#tuesday_prog {
  margin-left: 37.33px;
  margin-top: -40px;
}

#wednesday_prog {
  margin-left: 37.33px;
  margin-top: -40px;
}

#thursday_prog {
  margin-left: 37.33px;
  margin-top: -40px;
}

#friday_prog {
  margin-left: 37.33px;
  margin-top: -40px;
}

#saturday_prog {
  margin-left: 37.33px;
  margin-top: -40px;
}

#sunday_prog {
  margin-left: 37.33px;
  margin-top: -40px;
}

/* this part is for the text */
#Mon {
  width: 29px;
  height: 48px;
  margin-top: -10px;
  margin-left: 73.5px;
}

#Tue {
  width: 29px;
  height: 48px;
  margin-top: -10px;
  margin-left: 124.33px;
}

#Wed {
  width: 29px;
  height: 48px;
  margin-top: -10px;
  margin-left: 124.33px;
}

#Thur {
  width: 29px;
  height: 48px;
  margin-top: -10px;
  margin-left: 124.33px;
}

#Fri {
  width: 29px;
  height: 48px;
  margin-top: -10px;
  margin-left: 124.33px;
}

#Sat {
  width: 29px;
  height: 48px;
  margin-top: -10px;
  margin-left: 124.33px;
}

#Sun {
  width: 29px;
  height: 48px;
  margin-top: -10px;
  margin-left: 124.33px;
}

/* styling for "days completed" section */
.flex_container_days_completed {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  width: 516px;
  height: 376px;
  margin-left: 64px;
  margin-top: 40.17px;
  background: #FFFFFF;
  border: 1px solid #EFEFF0;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
  border-radius: 32px;
}

#calendar_icon {
  margin-top: 43.67px;
}

#days_completed_text {
  height: 96px;
  margin-top: 45px;
}

#days_completed_small_text {
  height: 48px;
  margin-top: 22px;
}

/* styling for the movement box (shares code from "days completed" section) */
#movement_box {
  margin-top: -380px;
  margin-left: 620px;
}

#movement_min_small_text {
  height: 48px;
  margin-top: 8px;
}

/* primary button */
#primary_button {
  width: 640px;
  height: 80px;
  background: #683CAE;
  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.3);
  border-radius: 48px;
  margin-left: 280px; 
  margin-top: 196px;
  margin-bottom: 32px;
  color: #FFFFFF;
  }

#font_adjust {
  margin-top: 10px;
}

html {
  margin: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

/* other styling */
body {
  font-family: 'Inter';
  font-style: normal;
  background-color: #FAFAFA;
  margin: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

#footer {
  display: flex;
  align-items: center;
  width: 100%;
  height: 120px;
  position: fixed;
  left: 0;
  bottom: 0;
  background-color: #FFFFFF;
  border-top: 1px solid #ABABAB;
}

.footer-tab {
  float: left;
  width: 33.33%;
  text-align: center;
  font-size: 26px;
  font-weight: 400;
  line-height: 39px;
  letter-spacing: 0.30000001192092896px;
  color: #666666;
}

.footer-tab > p {
  margin: 0;
  padding: 0;
}

/*PROGRESS PAGE STYLING*/

/*title styling*/
.flex_containter_prog_title {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex-wrap: wrap;
  width: 262.34;
  height: 50px;
  margin-left: 66.67px; 
  margin-top: 88px;
}

#back_button_home_pg {
  margin-top: 16.5px;
}

#progress_title {
  margin-top: 0px;
  margin-left: 34.67px;
  width: 201px;
  height: 55px;
  font-weight: 600;
  font-size: 46px;
  line-height: 120%;
}

/*Progress's "Weeks in Review" Section w/circular progress bars*/
.flex_container_prog_weeks {
  display: flex;
  flex-direction: row; 
  justify-content: flex-start;
  flex-wrap: wrap;
  width: 1072px;
  height: 335.17px;
  margin-left: 64px;
  margin-top: 40px;
  background: #FFFFFF;
  border: 1px solid #EFEFF0;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
  border-radius: 32px;
}

#week_arrow_left {
  background-color: white;
  border: none;
  width: 20.77px;
  height: 20.25px;
  margin-left: 37.33px;
  margin-top: 53.87px;
}

#prev_week {
  margin-left: 21.9px;
  margin-top: 44.5px;
  width: 181px;
  height: 39px;
  font-size: 26px;
}

#progress_week_date {
  width: 236px;
  height: 48px;
  margin-left: 183px;
  margin-top: 40px;
}

#next_week{
  width: 129px;
  height: 39px;
  margin-top: 44.5px;
  margin-left: 183px;
  font-size: 26px;
}

#week_arrow_right {
  background-color: white;
  border: none;
  width: 20.77px;
  height: 20.25px;
  margin-left: 21.9px;
  margin-top: 53.87px;
  transform: rotate(180deg);
}

/*Still Weeks in review section, now specifically code for the #days completed*/
.flex_container_prog_days_completed {
  display: flex; 
  flex-direction: row;
  flex-wrap: wrap;
  width: 348px;
  height: 144px;
  margin-top: 60px;
  margin-left: 64px;
}

#num_days_completed {
  width: 142px;
  height: 96px;
  font-family: 'Inter';
  font-style: normal;
  font-weight: 500;
  font-size: 96px;
  line-height: 100%;
  letter-spacing: 0.3px;
  color: #3C1E7C;
}

#num_days_completed_txt {
  width: 348px;
  height: 48px;
}

/*Circular Progress Bars*/
.flex_containter_circular_progress {
 display: flex; 
 flex-direction: row;
 flex-wrap: wrap;
 width: 618.01px;
 height: 152.73px;
 margin-top: 48px;
 margin-left: 10px;
}

#prog_mon {
  margin-left: 0px;
}

#prog_tue {
  margin-left: 12.77px;
}

#prog_wed {
  margin-left: 12.77px;
}

#prog_thur {
  margin-left: 12.77px;
}

#prog_fri {
  margin-left: 12.77px;
}

#prog_sat {
  margin-left: 12.77px;
}

#prog_sun {
  margin-left: 12.77px;
}

#prog_txt_mon {
  margin-left: 24.17px;
}

#prog_txt_tue {
  margin-left: 65.11px;
}

#prog_txt_wed {
  margin-left: 65.11px;
}

#prog_txt_thur {
  margin-left: 65.11px;
}
#prog_txt_fri {
  margin-left: 65.11px;
}

#prog_txt_sat {
  margin-left: 65.11px;
}

#prog_txt_sun {
  margin-left: 65.11px;
}

